force-app/main/default/objects/Voce_di_Spesa__c/Voce_di_Spesa__c.object-meta.xml
<CustomObject>
    <label>Voce di Spesa</label>
    <nameField>
        <label>Titolo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voci di Spesa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>