force-app/main/default/objects/Voce_di_Spesa__c/fields/Budget_Version__c.field-meta.xml
<CustomField>
    <fullName>Budget_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Version</label>
    <referenceTo>Budget_Version__c</referenceTo>
    <relationshipLabel>Voci di Spesa</relationshipLabel>
    <relationshipName>Voci_di_Spesa</relationshipName>
    <type>Lookup</type>
</CustomField>