force-app/main/default/objects/Voce_di_Spesa__c/fields/Programma__c.field-meta.xml
<CustomField>
    <fullName>Programma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programma</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Voci di Spesa</relationshipLabel>
    <relationshipName>Voci_di_Spesa</relationshipName>
    <type>Lookup</type>
</CustomField>