force-app/main/default/objects/Voce_di_Spesa__c/fields/Sottocategoria__c.field-meta.xml
<CustomField>
    <fullName>Sottocategoria__c</fullName>
    <label>Sottocategoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sottocategoria</valueSetName>










    </valueSet>
</CustomField>