force-app/main/default/objects/Voce_di_Spesa__c/fields/Stato__c.field-meta.xml
<CustomField>
    <fullName>Stato__c</fullName>
    <label>Stato</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prevista</fullName>
                <default>true</default>
                <label>Prevista</label>
            </value>
            <value>
                <fullName>Effettiva</fullName>
            </value>
            <value>
                <fullName>Annullata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>