force-app/main/default/objects/Voce_di_Spesa__c/fields/Stato_Precedente__c.field-meta.xml
<CustomField>
    <fullName>Stato_Precedente__c</fullName>
    <description>Popolato automaticamente dal trigger quando Stato__c diventa Annullata: registra il valore di Stato__c immediatamente precedente (Prevista o Effettiva). Usato da BudgetAggregator per erodere il totale corretto.</description>
    <label>Stato Precedente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prevista</fullName>
            </value>
            <value>
                <fullName>Effettiva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>